--- a/AreWeThereYet?/Base.lproj/LaunchScreen.storyboard
+++ b/AreWeThereYet?/Base.lproj/LaunchScreen.storyboard
@@ -18,20 +18,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIcon" translatesAutoresizingMaskIntoConstraints="NO" id="cxJ-N0-wEV">
-                                <rect key="frame" x="143" y="143" width="314" height="314"/>
-                                <color key="backgroundColor" red="0.11372549019607843" green="0.11372549019607843" blue="0.11372549019607843" alpha="1" colorSpace="calibratedRGB"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Car5" translatesAutoresizingMaskIntoConstraints="NO" id="kSQ-Ed-zNS">
+                                <rect key="frame" x="200" y="200" width="200" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="314" id="2bg-IW-cIP"/>
-                                    <constraint firstAttribute="height" constant="314" id="bhY-Jd-P1i"/>
-                                    <constraint firstAttribute="width" secondItem="cxJ-N0-wEV" secondAttribute="height" multiplier="1:1" id="iB4-cx-iV8"/>
+                                    <constraint firstAttribute="width" secondItem="kSQ-Ed-zNS" secondAttribute="height" multiplier="1:1" id="L2d-yF-pUp"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.15867741327300156" green="0.15867741327300156" blue="0.15867741327300156" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.081146304675716485" green="0.081146304675716485" blue="0.081146304675716485" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="cxJ-N0-wEV" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="gud-Yv-6cc"/>
-                            <constraint firstItem="cxJ-N0-wEV" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="jms-cl-Xue"/>
+                            <constraint firstItem="kSQ-Ed-zNS" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="G1s-YB-zla"/>
+                            <constraint firstItem="kSQ-Ed-zNS" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="JEv-oi-vI0"/>
+                            <constraint firstItem="kSQ-Ed-zNS" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="180" id="uUH-3t-d93"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -41,6 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="AppIcon" width="1000" height="1000"/>
+        <image name="Car5" width="800" height="800"/>
     </resources>
 </document>
